Logo fix on small displays

--- a/poke-tcg-cards/src/css/NavBar.css
+++ b/poke-tcg-cards/src/css/NavBar.css
@@ -12,8 +12,9 @@
 }
 
 .nav-brand img {
-    width: 100%;
-    height: 3em;
+    width: 3em;
+    height: auto;
+    object-fit: cover;
     text-decoration: none;
 }
 
